syntax = "proto3";

package protos;

message HeapOperation {
    enum Type {
        TYPE_ALLOC = 0;
        TYPE_FREE = 1;
    }

    Type type = 1;
    int64 micros_since_server_start = 2;
    int64 address = 3;
    optional int64 size = 4;
    uint64 thread_id = 5;
}

message Marker {
    int64 position = 1;
    string name = 2;
}

message HeapOperations {
    repeated HeapOperation heap_operations = 1;
    repeated Marker marker = 2;
    bool end_of_file = 3;
}